Use precompiled spigot jar