@@ -1,15 +1,9 @@
 #!/bin/bash
 
 if [ ! -f /minecraft/spigot.jar ]; then
-    mkdir -p /minecraft/build
-    cd /minecraft/build
-    wget https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar
-    java -jar BuildTools.jar
-    cp spigot-1.8.3.jar /minecraft/spigot.jar
-    cd /minecraft
+    cp /spigot.jar /minecraft/spigot.jar
+    echo eula=true > /minecraft/eula.txt
 fi
-
-echo eula=true > /minecraft/eula.txt
 
 mkdir -p /minecraft/plugins
 # Worldedit
@@ -25,7 +19,7 @@ wget -q http://dev.bukkit.org/media/files/870/415/OpenInv.jar -O /minecraft/plug
 # DisguiseCraft
 wget -q http://dev.bukkit.org/media/files/870/273/DisguiseCraft.jar -O /minecraft/plugins/disguisecraft.jar
 # EchoPet
-wget -q http://dev.bukkit.org/media/files/839/247/EchoPet-2.6.0.jar -O /minecraft/plugins/echopet.jar
+# wget -q http://dev.bukkit.org/media/files/839/247/EchoPet-2.6.0.jar -O /minecraft/plugins/echopet.jar
 # FirstJoinPlus
 wget -q http://dev.bukkit.org/media/files/806/317/FirstJoinPlus.jar -O /minecraft/plugins/firstjoinplus.jar
 # CoreProtect
@@ -33,7 +27,7 @@ wget -q http://dev.bukkit.org/media/files/820/756/CoreProtect_2.10.0.jar -O /min
 # AdminEssentials
 wget -q http://dev.bukkit.org/media/files/866/562/AdminEssentials.jar -O /minecraft/plugins/adminessentials.jar
 
-java -Xmx2014M -jar /minecraft/spigot.jar -o true nogui
+java -XX:MaxPermSize=128M -Xmx2014M -jar /minecraft/spigot.jar -o true nogui
 
 bash
 
